2001-08-12  Mikael Hallendal  <micke@codefactory.se>

	* src/ui.c:
	(gtk_ctree_goto): removed.
	(ctree_select_row_cb): removed.
	(book_index_uri_selected_cb): added, called when user clicks in
	BookIndex. 
	(devhelp_create_pixmaps): removed.
	- removed DevhelpPixmap-struct.
	(devhelp_insert_book_node): removed.
	(devhelp_create_book_tree): removed.
	- Use BookIndex instead of GtkCTree directly., much of the
	functionality has been moved into BookIndex internals. Much
	cleanups in ui.c
	(devhelp_create_ui): moved around to initialize Bookshelf before
	the BookIndex.
	- removed DevHelpPixmaps.
	
	* src/main.h: changed the DevHelp->ctree for a DevHelp->book_index.

	* src/install.c (install_insert_book): call book_index_add_book
	instead of doing all the dirty work yourself.

	* src/bookshelf.c:
	(bookshelf_find_document): also handles absolute url's.

	* src/book.c:
	(book_url_get_book_relative): now also handles absolute url's.

	* src/book-index.[ch]: 
	- Added
	- This is a subclass of GtkCTree which is used to display the
	  book-index. It will later be available as a BonoboControl which
	  is used with BonoboPropertyBag.

	* src/Makefile.am (devhelp_SOURCES): added book-index.[ch]

	* devhelp.spec.in: added sysconfdir by request of YupaSD.

2001-08-09  Richard Hult  <rhult@codefactory.se>

	* src/ui.c (main_window_key_press_event_cb): Make control-l focus
	the search entry and select the contents of the entry.

2001-08-07  Mikael Hallendal  <micke@codefactory.se>

	* src/bookshelf.[ch]: added bookshelf_remove book.

2001-08-05  Johan Dahlin  <zilch.am@home.se>

	* src/ui.c (devhelp_create_ui): gtk_clist_set_column_with &
	gtk_clist_set_selection_mode added, this fixes click on link and
	ctree will go empty bug.

2001-08-05  Mikael Hallendal  <micke@codefactory.se>

	* src/ui.c: just some style cleanups.

	* src/bookmark-manager.c: fixed to work fine with Document/anchor
	way of doing it.

	* src/book-node.h: include libgnomevfs/gnome-vfs.h
